--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/vuetify": "^1.11.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^4.19.1",
