--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.5",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-vanta": "0.0.1"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^1.3.0",
