--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "nuxt-animejs": "^1.2.1"
   }
 }
